@startuml
'https://plantuml.com/class-diagram

' Configuración para que las líneas sean rectas
skinparam Linetype ortho
'https://plantuml.com/class-diagram

' ===============================
' HECHO VENTAS
' ===============================


entity BI_Hechos_Ventas {
    * tiempo_id: bigint <<FK>>
    * canal_id: bigint <<FK>>
    * rango_et_cli_id: bigint <<FK>>
    * tipo_servicio_id: bigint <<FK>>
    --
    * importe_total : decimal(18,2)
    * cantidad_ventas : int
}

' ===============================
' HECHO Solicitud
' ===============================


entity BI_Hechos_Solicitud{
    * tiempo_id : bigint <<FK>>
    * rango_et_cli_id: bigint <<FK>>
    * temporada_id: bigint <<FK>>
    --
    * dias_anticipacion : int 
    * cantidad_solicitudes : int
}



' ===============================
' HECHO Propuesta
' ===============================


entity BI_Hechos_Propuestas{
    * tiempo_emision_id: bigint <<FK>>
    * tiempo_solicitud_id: bigint <<FK>>
    * tiempo_inicio_viaje_id: bigint <<FK>>
    * temporada_id: bigint <<FK>>
    * rango_etario_agente_id: bigint <<FK>>
    * estado_propuesta_id: bigint <<FK>>
    --
    * importe_total : decimal(18,2)
    * presupuesto_estimado : decimal(18,2)
    * dias_respuesta : int
    * cantidad_propuestas : int
}


' ===============================
' HECHO Encuesta
' ===============================

entity BI_Hechos_Encuestas{
    tiempo_id: bigint <<FK>>
    rango_et_age_id: bigint <<FK>>
    aspecto_id: bigint <<FK>>
    --
    puntaje_total: bigint
    cantidad_valoraciones: bigint
}

entity BI_Dim_Tiempo {
    * tiempo_id: bigint <<PK>>
    * anio: int
    * cuatrimestre: int
    * mes: int
}

entity BI_Dim_Canal {
    * canal_id: bigint <<PK>>
    --
    canal_detalle: nvarchar(255)
}

entity BI_Dim_RangoEtarioAgente{
    rango_etario_agente_id: bigint <<PK>>
    --
    rango_descripcion: nvarchar(50)    
}

entity BI_Dim_RangoEtarioCliente{
    rango_etario_cliente_id: bigint <<PK>>
    --
    rango_descripcion: nvarchar(50)    
}

entity BI_Dim_TipoServicio {
    * tipo_servicio_id: bigint <<PK>>
    --
    * tipo_descripcion: nvarchar(50)
}


entity BI_Dim_Temporadas{
    * temporada_id : bigint <<PK>>
    --
    * temporada_descripcion: nvarchar(50)
}


entity BI_Dim_Estado_Propuesta {
    * estado_id: bigint <<PK>>
    --
    * estado_nombre: nvarchar(255)
}

entity BI_Dim_Aspecto {
    * aspecto_id: bigint <<PK>>
    --
    * aspecto_descripcion: nvarchar(50)

}

' ===============================
' RELACIONES (Hecho }o--|| Dimensión)
' ===============================

BI_Hechos_Ventas ||--{ BI_Dim_Tiempo
BI_Hechos_Ventas ||--o{ BI_Dim_RangoEtarioCliente
BI_Hechos_Ventas ||--o{ BI_Dim_Canal
BI_Hechos_Ventas||--o{ BI_Dim_TipoServicio 


BI_Hechos_Solicitud ||--o{ BI_Dim_Tiempo
BI_Hechos_Solicitud ||--o{ BI_Dim_RangoEtarioCliente
BI_Hechos_Solicitud ||--o{BI_Dim_Temporadas

BI_Hechos_Propuestas }o--|| BI_Dim_Tiempo
BI_Hechos_Propuestas }o--|| BI_Dim_Tiempo
BI_Hechos_Propuestas }o--|| BI_Dim_Tiempo
BI_Hechos_Propuestas }o--|| BI_Dim_Temporadas
BI_Hechos_Propuestas }o--|| BI_Dim_RangoEtarioAgente
BI_Hechos_Propuestas }o--|| BI_Dim_Estado_Propuesta

BI_Hechos_Encuestas }o--|| BI_Dim_Tiempo
BI_Hechos_Encuestas }o--|| BI_Dim_RangoEtarioAgente
BI_Hechos_Encuestas }o--|| BI_Dim_Aspecto

@enduml
